<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/material_dynamic_primary95"
    tools:layout_editor_absoluteY="79dp">

    <Button
        android:id="@+id/btToday"
        android:layout_width="19dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/addScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDate" />

    <TextView
        android:id="@+id/addDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:text="@string/watch_date"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDate"
        app:layout_constraintStart_toEndOf="@+id/addScore"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addDate"
        app:layout_constraintStart_toStartOf="@+id/addDate" />

    <TextView
        android:id="@+id/addType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/type"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addScore" />

    <SeekBar
        android:id="@+id/sbScore"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toBottomOf="@+id/addScore"
        app:layout_constraintEnd_toEndOf="@+id/etDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etDate"
        app:layout_constraintTop_toTopOf="@+id/addScore"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addType" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="24dp"
        android:checkedButton="@id/radioButton4"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addType"
        app:layout_constraintTop_toBottomOf="@+id/sbScore"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieMovie"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="253dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seriesSeries"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="301dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="casual"
        android:text="@string/add_show"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:text="@string/lt_catalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>