<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemMovieConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/material_dynamic_primary90"
    android:orientation="vertical">

    <TextView
        android:id="@+id/movieType"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:text="@string/movie"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieEdit" />

    <TextView
        android:id="@+id/movieName"
        android:layout_width="128dp"
        android:layout_height="19dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/movieEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieScore"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        app:layout_constraintStart_toEndOf="@+id/movieEdit"
        app:layout_constraintTop_toBottomOf="@+id/movieDate" />

    <TextView
        android:id="@+id/movieDate"
        android:layout_width="129dp"
        android:layout_height="19dp"
        android:layout_marginStart="104dp"
        app:layout_constraintStart_toEndOf="@+id/movieEdit"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />

    <Button
        android:id="@+id/movieEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/watch_date"
        app:layout_constraintStart_toEndOf="@+id/movieEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/movieEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

</androidx.constraintlayout.widget.ConstraintLayout>
